# sailing-upwind

./: .gitignore  LICENSE  README.md  _config.yml  config.yaml  pyproject.toml  two-def.md
.github/workflows/: ci.yml  pages.yml
_includes/: head.html  head_custom.html  header.html
sailing_upwind/: __init__.py  __main__.py  config.py  diagrams.py  model.py  plots.py  two_deflector.py
tests/: test_config.py  test_model.py
